--- a/config
+++ b/config
@@ -3,10 +3,10 @@
 # This config is case sensitive
 
 # Set the editor that notes are opened with
-EDITOR=nano
+# EDITOR=nano
 
 # Change the quicknote format to get rid of the word "quicknote"
-QUICKNOTE_FORMAT="%Y-%m-%d"
+# QUICKNOTE_FORMAT="%Y-%m-%d"
 
 # Set extension to plain txt instead of markdown
-NOTES_EXT="txt"
+#NOTES_EXT="txt"
