--- a/config
+++ b/config
@@ -1,4 +1,4 @@
-# This is an example configuration file for notes 
+# This is an example configuration file for notes
 # To use it, copy to ~/.config/notes/config
 # This config is case sensitive
 
@@ -9,4 +9,7 @@
 # QUICKNOTE_FORMAT="%Y-%m-%d"
 
 # Set extension to plain txt instead of markdown
-#NOTES_EXT="txt"
+# NOTES_EXT="txt"
+
+# Define the directory where notes are stored
+# NOTES_DIRECTORY=~/notes
